# WP-Inspect

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: args.rs  main.rs
src/output/: csv.rs  mod.rs  tty.rs
src/scanner/: backup.rs  mod.rs  utils.rs  web.rs
tests/: test_utils.py  test_wordpress_comperator.py  test_wp_comperator.py
wp_inspect/: utils.py  wordpress_comperator.py  wp_comperator.py  wp_inspect.py
