[tool.poetry]
name = "wp-inspect"
version = "0.1.0"
description = "Identify changes made to WordPress files by comparing it to either the original source code from the internet or a backup."
authors = ["Luca Kuechler <lucakuechler.business@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyfiglet = "^1.0.2"
rich = "^13.7.1"
termcolor = "^2.4.0"
requests = "^2.31.0"
click = "^8.1.7"
click-help-colors = "^0.9.4"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.10.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"

[tool.poetry.scripts]
wpinspect = "wp_inspect.wp_inspect:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "D",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
